force-app/main/default/objects/Lumary_Admin_Audit__c/Lumary_Admin_Audit__c.object-meta.xml
<CustomObject>
    <label>Lumary Admin Audit</label>
    <nameField>
        <label>Lumary Admin Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lumary Admin Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>