force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Associate_Provider_Entered__c.field-meta.xml
<CustomField>
    <fullName>Associate_Provider_Entered__c</fullName>
    <label>Entered Associated Provider</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>