force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Associated_Provider_Entered__c.field-meta.xml
<CustomField>
    <fullName>Associated_Provider_Entered__c</fullName>
    <label>Associated Provider Entered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scoring</valueSetName>
    </valueSet>
</CustomField>