force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client related to Audit</description>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lumary Admin Audits</relationshipLabel>
    <relationshipName>Lumary_Admin_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>