force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Clinician__c.field-meta.xml
<CustomField>
    <fullName>Clinician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Clinician being audited</description>
    <label>Clinician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lumary Admin Audits (Clinician)</relationshipLabel>
    <relationshipName>Lumary_Admin_Audits1</relationshipName>
    <type>Lookup</type>
</CustomField>