force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Initial_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Assessment_Date__c</fullName>
    <label>Initial Assessment Date</label>
    <type>Date</type>
</CustomField>