force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Initial_Report_Upload__c.field-meta.xml
<CustomField>
    <fullName>Initial_Report_Upload__c</fullName>
    <label>Initial Report Uploaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>