force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Initial_Report_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Initial_Report_Uploaded__c</fullName>
    <label>Initial Report Uploaded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scoring</valueSetName>
    </valueSet>
</CustomField>