force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Note_following_phone_calls__c.field-meta.xml
<CustomField>
    <fullName>Note_following_phone_calls__c</fullName>
    <label>Note following phone calls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scoring</valueSetName>
    </valueSet>
</CustomField>