force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Note_following_subsequent_assessment_s__c.field-meta.xml
<CustomField>
    <fullName>Note_following_subsequent_assessment_s__c</fullName>
    <label>Note following subsequent assessment/s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scoring</valueSetName>
    </valueSet>
</CustomField>