force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Note_within_24_hour_of_Initial_Ax__c.field-meta.xml
<CustomField>
    <fullName>Note_within_24_hour_of_Initial_Ax__c</fullName>
    <label>Note within 24 hours of Initial Ax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>