force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Overdue_Task__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Task__c</fullName>
    <inlineHelpText>0 = 4 points
&lt; 10 = 2 points
&gt; 10 = 0 points</inlineHelpText>
    <label>Overdue Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>