force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Overdue_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Tasks__c</fullName>
    <inlineHelpText>0 overdue = 4 bonus points
&lt;10 overdues = 2 points
&gt;10 overdues = 0 points</inlineHelpText>
    <label>Overdue Tasks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scoring</valueSetName>
    </valueSet>
</CustomField>