force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Record_of_SA__c.field-meta.xml
<CustomField>
    <fullName>Record_of_SA__c</fullName>
    <label>Record of Service Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>