force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Record_of_Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Record_of_Service_Agreement__c</fullName>
    <label>Record of Service Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scoring</valueSetName>
    </valueSet>
</CustomField>