force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Risk_Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Completed__c</fullName>
    <label>Risk Assessment Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scoring</valueSetName>
    </valueSet>
</CustomField>