force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Risk_Ax_Completed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Ax_Completed__c</fullName>
    <label>Risk Assessment Completed</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>