force-app/main/default/objects/Lumary_Admin_Audit__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>Associate_Provider_Entered__c + Initial_Report_Upload__c + Note_within_24_hour_of_Initial_Ax__c + Overdue_Task__c + Record_of_SA__c + Risk_Ax_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>