force-app/main/default/objects/Lumary_Admin_Audit__c/validationRules/Initial_Report_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Report_Value</fullName>
    <active>true</active>
    <description>Please select either 0 or 2</description>
    <errorConditionFormula>NOT( Initial_Report_Upload__c  =   0  ||Initial_Report_Upload__c   = 2 )</errorConditionFormula>
    <errorDisplayField>Initial_Report_Upload__c</errorDisplayField>
    <errorMessage>Please select either 0 or 2</errorMessage>
</ValidationRule>