force-app/main/default/objects/Lumary_Admin_Audit__c/validationRules/Risk_Ax_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_Ax_Values</fullName>
    <active>true</active>
    <description>0 or 2</description>
    <errorConditionFormula>NOT( Risk_Ax_Completed__c =0 ||Risk_Ax_Completed__c = 2 )</errorConditionFormula>
    <errorDisplayField>Risk_Ax_Completed__c</errorDisplayField>
    <errorMessage>Please select either 0 or 2</errorMessage>
</ValidationRule>