force-app/main/default/objects/Lumary_Admin_Audit__c/validationRules/SA_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>SA_Values</fullName>
    <active>true</active>
    <description>Please select either 0 or 2</description>
    <errorConditionFormula>NOT(Record_of_SA__c =0 ||Record_of_SA__c = 2 )</errorConditionFormula>
    <errorDisplayField>Record_of_SA__c</errorDisplayField>
    <errorMessage>Please select either 0 or 2</errorMessage>
</ValidationRule>