force-app/main/default/objects/Lumary_Admin_Audit__c/validationRules/Value_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Notes</fullName>
    <active>true</active>
    <description>Please select either 0 or 2</description>
    <errorConditionFormula>NOT( Note_within_24_hour_of_Initial_Ax__c    =   0  ||Note_within_24_hour_of_Initial_Ax__c   = 2)</errorConditionFormula>
    <errorDisplayField>Note_within_24_hour_of_Initial_Ax__c</errorDisplayField>
    <errorMessage>Please select either 0 or 2</errorMessage>
</ValidationRule>