force-app/main/default/objects/Lumary_Admin_Audit__c/validationRules/Value_Tasks.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Tasks</fullName>
    <active>true</active>
    <description>Please select either 0,2 or 4</description>
    <errorConditionFormula>NOT( Overdue_Task__c   =   0  ||Overdue_Task__c    = 2 ||Overdue_Task__c  =  4)</errorConditionFormula>
    <errorDisplayField>Overdue_Task__c</errorDisplayField>
    <errorMessage>Please select either 0,2 or 4</errorMessage>
</ValidationRule>