force-app/main/default/objects/Lumary_Admin_Audit__c/validationRules/Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Values</fullName>
    <active>true</active>
    <description>0 or 2</description>
    <errorConditionFormula>NOT(Associate_Provider_Entered__c   =   0  ||Associate_Provider_Entered__c   = 2)</errorConditionFormula>
    <errorDisplayField>Associate_Provider_Entered__c</errorDisplayField>
    <errorMessage>Please select either 0 or 2</errorMessage>
</ValidationRule>