force-app/main/default/objects/Lumary_Admin_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Clinician__c</columns>
    <columns>Office__c</columns>
    <columns>Total_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>