force-app/main/default/objects/Lumary_Admin_Audit__c/listViews/GC_Audits.listView-meta.xml
<ListView>
    <fullName>GC_Audits</fullName>
    <columns>NAME</columns>
    <columns>Clinician__c</columns>
    <columns>Client__c</columns>
    <columns>Office__c</columns>
    <columns>Total_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>Gold Coast</value>
    </filters>
    <label>GC Audits</label>
</ListView>