force-app/main/default/objects/Lumary_Admin_Audit__c/listViews/North_Lakes_Audit.listView-meta.xml
<ListView>
    <fullName>North_Lakes_Audit</fullName>
    <columns>NAME</columns>
    <columns>Clinician__c</columns>
    <columns>Office__c</columns>
    <columns>Total_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>North Lakes</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
    </filters>
    <label>North Lakes Audit</label>
</ListView>