force-app/main/default/objects/Lumary_Admin_Audit__c/listViews/NSW.listView-meta.xml
<ListView>
    <fullName>NSW</fullName>
    <columns>NAME</columns>
    <columns>Clinician__c</columns>
    <columns>Office__c</columns>
    <columns>Total_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>Bankstown,Blacktown,Brookvale,Dickson,Eastern Sydney,Macquarie Park,Newcastle,Penrith,Terrigal,Wollongong</value>
    </filters>
    <label>NSW</label>
</ListView>