force-app/main/default/objects/Lumary_Admin_Audit__c/listViews/QLD.listView-meta.xml
<ListView>
    <fullName>QLD</fullName>
    <columns>NAME</columns>
    <columns>Clinician__c</columns>
    <columns>Office__c</columns>
    <columns>Total_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>Brendale,Gold Coast,North Lakes,Springwood,Stones Corner</value>
    </filters>
    <label>QLD</label>
</ListView>