force-app/main/default/objects/Lumary_Admin_Audit__c/listViews/WA.listView-meta.xml
<ListView>
    <fullName>WA</fullName>
    <columns>NAME</columns>
    <columns>Clinician__c</columns>
    <columns>Client__c</columns>
    <columns>Office__c</columns>
    <columns>Total_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>Cockburn,Inglewood</value>
    </filters>
    <label>WA</label>
</ListView>